--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ header h1{
     font-weight: 700;
 }
 
-
 header p{
     margin-bottom: 20px;
     font-weight: 300;
@@ -61,7 +60,8 @@ input[type=button]:hover {
     background-color: #e7e7e7;
 }
 
-@media only screen and (max-width: 600px) {
-    body {
+@media only screen and (max-width: 700px) {
+    .sign-up p{
+        width: 400px;
     }
-  }
+}
