--- a/style.css
+++ b/style.css
@@ -60,8 +60,14 @@ input[type=button]:hover {
     background-color: #e7e7e7;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 730px) {
     .sign-up p{
         width: 400px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .sign-up p{
+        width: 350px;
     }
 }
