--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ input[type=text]:focus {
 }
 
 input[type=button] {
+    color: black;
     padding: 5px;
     background-color: white;
     border: 2px solid black;
